# HLV-G-Lattice-Simulation-Lab

./: .gitignore  01_generate_g_lattice.ipynb  CITATION.cff  CMakeLists.txt  PAPER.md  README.md  THEORY.md  Untitled.ipynb  hlv_stress_test  pyproject.toml  requirements.txt  setup.py
notebooks/: 01_generate_g_lattice.ipynb  02_laplacian_recovery.ipynb  03_spectrum_analysis.ipynb  04_vortex_simulation.ipynb  05_null_model_comparison.ipynb  hlv_engine  hlv_engine.cpp
src/: NeighborGraph.hpp  hlv_engine.cpp  main.cpp
src/cpp_core/: AcceptanceWindow.hpp  GLatticeGenerator.hpp  SimulationContext.hpp  bindings.cpp
